2013-04-14  Jiyoun Park

        * Evas: fix gif bug related with scale down decode.

2013-04-14  Jiyoun Park

        * Evas: fix gif decoding bug related with background color.

2013-04-14  ChunEon Park

        * Evas: Don't update evas update area by the clipper if the image obj visible is changed.

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Work around new intel Mesa/xorg bug where alpha
        channel in NON-ARGB windows is not filled in with 0xff even if all the
        code does things right.

2013-04-13  ChunEon Park

        * Evas: Don't be crashed even if the map image size is 0.

2013-04-13  Jihoon Kim

        * Ecore_IMF: Add ecore_imf_input_panel_hide () API
        * Ecore_IMF: Add ecore_imf_context_input_panel_event_callback_call, clear API

2013-04-10  Rafael Antognolli

        * Ecore: Add support for double and triple click on Wayland.

2013-04-10 Tom Hacohen (Tasn) Yakov Goldberg
        * Evas textblock : Added split cursor for BiDi text

2013-04-10  WooHyun Jung

        * Edje: When cursor is located to each edge, entry now doesn't grab events for cursor movement.

2013-04-10  Carsten Haitzler (The Rasterman)

        * Evas: Add glx buffer age support for automatic partial
          redraw in glx.
        * Evas: Support GLX_MESA_release_buffers extension to release
          unused aux buffers.

2013-04-09  Jérémy Zurcher (jeyzu)

        * Eina: Add eina_inlist_first and eina_inlist_last

2013-04-08  Tom Hacohen

        * Evas font: Fix a bug with cluster size calculation with texts ending
	with ligatures.

2013-04-08  Carsten Haitzler (The Rasterman)

        * Evas: Add control API for multiple outputs (non-functional).

2013-04-05  Cedric Bail

        * Evas: Fix over redrawing of Evas_Map when applied on smart object.

2013-04-04  Jiyoun Park

        * Evas font: fix font source have wrong current size.

2013-04-04  Tom Hacohen

        * Evas font: If OS/2 table is available and the font is demi-bold,