@@ -7545,6 +7545,11 @@ _evas_textblock_node_text_adjust_offsets_to_start(Evas_Object_Textblock *o,
              last_node->offset -= delta;
              break;
           }
+        else if (use_end && itr && (pos + itr->offset >= (size_t) end) &&
+              itr->visible)
+          {
+             break;
+          }
 
         delta = orig_end - pos;
         if (!first)
